# rs-sdk

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ffi.yml  rust.yml
contextvm-ffi/: .gitignore  Cargo.toml  README.md
contextvm-ffi/c-tests/: Makefile  test_ffi  test_ffi.c
contextvm-ffi/headers/: contextvm.h
contextvm-ffi/src/: builders.rs  channel.rs  discovery.rs  error.rs  handle.rs  kv.rs  lib.rs  runtime.rs  types.rs  uniffi_types.rs
contextvm-ffi/tests/: e2e_ffi_crypto.rs  e2e_ffi_happy_path.rs  e2e_ffi_mock_relay.rs  e2e_ffi_nak_relay.rs
docs/: README.md  client-transport.md  discovery.md  encryption.md  gateway.md  open-stream.md  oversized-transfer.md  overview.md  proxy.md  rmcp.md  server-transport.md  stateless.md  transport-modes.md  transports.md
src/: lib.rs
src/core/: constants.rs  error.rs  types.rs
src/discovery/: mod.rs
src/encryption/: mod.rs
src/gateway/: mod.rs
src/proxy/: mod.rs
src/relay/: mock.rs  mod.rs
src/rmcp_transport/: mod.rs  open_stream.rs  pipeline_tests.rs  progress.rs  worker.rs
src/transport/: discovery_tags.rs  mod.rs
src/transport/client/: correlation_store.rs  mod.rs  relay_resolution.rs  server_relay_discovery.rs
src/transport/open_stream/: constants.rs  errors.rs  frame.rs  mod.rs  receiver.rs  registry.rs  session.rs  writer.rs
src/transport/oversized_transfer/: constants.rs  frame.rs  mod.rs  receiver.rs  sender.rs  sizing.rs
src/transport/server/: announcement_manager.rs  correlation_store.rs  mod.rs  session_store.rs
tests/: conformance_cep22_wire_format.rs  e2e_happy_path.rs  open_stream_e2e.rs  open_stream_timeout_e2e.rs  oversized_timeout_e2e.rs  transport_integration.rs
